--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
           <li><a href="#work">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact Me</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
