--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Stephanie Ausfresser Design Portfolio</title>
+  <title>Stephanie Ausfresser Portfolio</title>
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 </head>
 
