--- a/about.html
+++ b/about.html
@@ -104,128 +104,17 @@
 
             <!-- Email -->
             <a href="mailto:sausfresser@gmail.com" target="_blank">
-              <svg version="1.1" id="Layer_1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50"
-                style="enable-background:new 0 0 50 50;" xml:space="preserve">
-                <style type="text/css">
-                  .st0 {
-                    fill: #00ABC8;
-                  }
-                </style>
-                <switch>
-                  <foreignObject requiredExtensions="&ns_ai;" x="0" y="0" width="1" height="1">
-                    <i:pgfRef xlink:href="#adobe_illustrator_pgf">
-                    </i:pgfRef>
-                  </foreignObject>
-                  <g i:extraneous="self">
-                    <path class="st0" d="M25,0C11.19,0,0,11.2,0,25c0,13.8,11.19,25,25,25c13.81,0,25-11.2,25-25C50,11.2,38.81,0,25,0z M13.97,14.41
-                        			h22.06c0.64,0,1.24,0.16,1.75,0.42L25,25.05L12.22,14.82C12.73,14.56,13.33,14.41,13.97,14.41z M10.28,31.21V17.77
-                        			c0-0.66,0.22-1.27,0.57-1.78l9.19,7.34l-9.29,9.5C10.46,32.35,10.28,31.8,10.28,31.21z M36.03,34.57H13.97
-                        			c-0.72,0-1.38-0.19-1.95-0.52l9.41-9.62l2.97,2.36c0.17,0.14,0.38,0.21,0.6,0.21c0.22,0,0.43-0.07,0.6-0.2l2.97-2.37l9.41,9.62
-                        			C37.41,34.38,36.75,34.57,36.03,34.57z M39.72,31.21c0,0.59-0.18,1.14-0.47,1.62l-9.29-9.5l9.19-7.34
-                        			c0.35,0.51,0.57,1.13,0.57,1.78V31.21z" />
-                    <path class="st0" d="M95,0.05c-13.81,0-25,11.19-25,25c0,13.8,11.19,25,25,25c13.81,0,25-11.19,25-25
-                        			C120,11.25,108.81,0.05,95,0.05z M89.24,35.14h-4.52V21.53h4.52V35.14z M86.98,19.67h-0.03c-1.52,0-2.5-1.04-2.5-2.35
-                        			c0-1.34,1.01-2.35,2.56-2.35c1.55,0,2.5,1.02,2.53,2.35C89.54,18.63,88.55,19.67,86.98,19.67z M105.55,35.14h-4.53v-7.28
-                        			c0-1.83-0.65-3.08-2.29-3.08c-1.25,0-1.99,0.84-2.32,1.65c-0.12,0.29-0.15,0.7-0.15,1.1v7.6h-4.53c0,0,0.06-12.33,0-13.61h4.53
-                        			v1.93c0.6-0.92,1.67-2.25,4.08-2.25c2.98,0,5.21,1.94,5.21,6.12V35.14z" />
-                    <g>
-                      <path class="st0" d="M34.83,92.49c-3.22,0-3.67,3.22-3.67,3.22h6.85C38.01,95.71,38.06,92.49,34.83,92.49z" />
-                      <path class="st0" d="M19.29,95.71h-6.07v5.58h5.38c0.09,0,0.23,0,0.39,0c0.87-0.02,2.5-0.27,2.5-2.71
-                        				C21.49,95.68,19.29,95.71,19.29,95.71z" />
-                      <path class="st0" d="M25,70C11.19,70,0,81.19,0,95s11.19,25,25,25c13.81,0,25-11.19,25-25C50,81.19,38.81,70,25,70z M30.26,85.36
-                        				h8.61v2.57h-8.61V85.36z M25.91,98.84c0,6.37-6.62,6.16-6.62,6.16h-6.07h-0.18h-4.6V84.13h4.6h0.18h6.07c3.3,0,5.9,1.82,5.9,5.55
-                        				s-3.18,3.97-3.18,3.97C26.2,93.66,25.91,98.84,25.91,98.84z M42.01,98.49H31.2c0,3.87,3.67,3.63,3.67,3.63
-                        				c3.47,0,3.35-2.24,3.35-2.24h3.67c0,5.96-7.14,5.55-7.14,5.55c-8.56,0-8.01-7.97-8.01-7.97s-0.01-8.01,8.01-8.01
-                        				C43.19,89.44,42.01,98.49,42.01,98.49z" />
-                      <path class="st0" d="M20.76,90.01c0-2.17-1.48-2.17-1.48-2.17h-0.78h-5.29v4.65h5.7C19.89,92.49,20.76,92.18,20.76,90.01z" />
-                    </g>
-                  </g>
-                </switch>
-              </svg>
+              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>email</title><path class="cls-1" d="M24.9993.0007A24.9993,24.9993,0,1,0,50,24.9972,25.0014,25.0014,0,0,0,24.9993.0007ZM13.9683,14.4052H36.0325a3.8661,3.8661,0,0,1,1.7518.42L24.9993,25.0527,12.2157,14.825A3.8692,3.8692,0,0,1,13.9683,14.4052Zm-3.6837,16.808V17.7679a3.1337,3.1337,0,0,1,.5721-1.7845l9.1946,7.3431-9.295,9.5048A3.0935,3.0935,0,0,1,10.2846,31.2132Zm25.7479,3.3613H13.9683a3.8753,3.8753,0,0,1-1.9461-.5166l9.4108-9.62,2.9658,2.3637a.9354.9354,0,0,0,.6005.2092.9707.9707,0,0,0,.602-.202l2.9657-2.3709,9.4108,9.62A3.8739,3.8739,0,0,1,36.0325,34.5745Zm3.6829-3.3613a3.0923,3.0923,0,0,1-.4724,1.6181l-9.2941-9.5048,9.1944-7.3431a3.1337,3.1337,0,0,1,.5721,1.7845Z"/></svg>
             </a>
 
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/stephanie-ausfresser/" target="_blank">
-              <svg version="1.1" id="Layer_1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50"
-                style="enable-background:new 0 0 50 50;" xml:space="preserve">
-                <style type="text/css">
-                  .st0 {
-                    fill: #00ABC8;
-                  }
-                </style>
-                <switch>
-                  <foreignObject requiredExtensions="&ns_ai;" x="0" y="0" width="1" height="1">
-                    <i:pgfRef xlink:href="#adobe_illustrator_pgf">
-                    </i:pgfRef>
-                  </foreignObject>
-                  <g i:extraneous="self">
-                    <path class="st0" d="M-45,0c-13.81,0-25,11.2-25,25c0,13.8,11.19,25,25,25c13.81,0,25-11.2,25-25C-20,11.2-31.19,0-45,0z
-            			 M-56.03,14.41h22.06c0.64,0,1.24,0.16,1.75,0.42L-45,25.05l-12.78-10.23C-57.27,14.56-56.67,14.41-56.03,14.41z M-59.72,31.21
-            			V17.77c0-0.66,0.22-1.27,0.57-1.78l9.19,7.34l-9.29,9.5C-59.54,32.35-59.72,31.8-59.72,31.21z M-33.97,34.57h-22.06
-            			c-0.72,0-1.38-0.19-1.95-0.52l9.41-9.62l2.97,2.36c0.17,0.14,0.38,0.21,0.6,0.21c0.22,0,0.43-0.07,0.6-0.2l2.97-2.37l9.41,9.62
-            			C-32.59,34.38-33.25,34.57-33.97,34.57z M-30.28,31.21c0,0.59-0.18,1.14-0.47,1.62l-9.29-9.5l9.19-7.34
-            			c0.35,0.51,0.57,1.13,0.57,1.78V31.21z" />
-                    <path class="st0" d="M25,0.05c-13.81,0-25,11.19-25,25c0,13.8,11.19,25,25,25c13.81,0,25-11.19,25-25C50,11.25,38.81,0.05,25,0.05
-            			z M19.24,35.14h-4.52V21.53h4.52V35.14z M16.98,19.67h-0.03c-1.52,0-2.5-1.04-2.5-2.35c0-1.34,1.01-2.35,2.56-2.35
-            			c1.55,0,2.5,1.02,2.53,2.35C19.54,18.63,18.55,19.67,16.98,19.67z M35.55,35.14h-4.53v-7.28c0-1.83-0.65-3.08-2.29-3.08
-            			c-1.25,0-1.99,0.84-2.32,1.65c-0.12,0.29-0.15,0.7-0.15,1.1v7.6h-4.53c0,0,0.06-12.33,0-13.61h4.53v1.93
-            			c0.6-0.92,1.67-2.25,4.08-2.25c2.98,0,5.21,1.94,5.21,6.12V35.14z" />
-                    <g>
-                      <path class="st0" d="M-35.17,92.49c-3.22,0-3.67,3.22-3.67,3.22h6.85C-31.99,95.71-31.94,92.49-35.17,92.49z" />
-                      <path class="st0" d="M-50.71,95.71h-6.07v5.58h5.38c0.09,0,0.23,0,0.39,0c0.87-0.02,2.5-0.27,2.5-2.71
-            				C-48.51,95.68-50.71,95.71-50.71,95.71z" />
-                      <path class="st0" d="M-45,70c-13.81,0-25,11.19-25,25s11.19,25,25,25c13.81,0,25-11.19,25-25C-20,81.19-31.19,70-45,70z
-            				 M-39.74,85.36h8.61v2.57h-8.61V85.36z M-44.09,98.84c0,6.37-6.62,6.16-6.62,6.16h-6.07h-0.18h-4.6V84.13h4.6h0.18h6.07
-            				c3.3,0,5.9,1.82,5.9,5.55s-3.18,3.97-3.18,3.97C-43.8,93.66-44.09,98.84-44.09,98.84z M-27.99,98.49H-38.8
-            				c0,3.87,3.67,3.63,3.67,3.63c3.47,0,3.35-2.24,3.35-2.24h3.67c0,5.96-7.14,5.55-7.14,5.55c-8.56,0-8.01-7.97-8.01-7.97
-            				s-0.01-8.01,8.01-8.01C-26.81,89.44-27.99,98.49-27.99,98.49z" />
-                      <path class="st0" d="M-49.24,90.01c0-2.17-1.48-2.17-1.48-2.17h-0.78h-5.29v4.65h5.7C-50.11,92.49-49.24,92.18-49.24,90.01z" />
-                    </g>
-                  </g>
-                </switch>
-              </svg>
+              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>linkedin</title><path class="cls-1" d="M24.9993.0527A25,25,0,1,0,50.001,25.0538,25.0024,25.0024,0,0,0,24.9993.0527Zm-5.76,35.0846H14.7156V21.5281H19.239ZM16.9758,19.67h-.0279a2.3576,2.3576,0,1,1,.0587-4.7022,2.3587,2.3587,0,1,1-.0308,4.7022ZM35.5527,35.1373H31.0265V27.8564c0-1.8273-.651-3.0761-2.291-3.0761a2.4733,2.4733,0,0,0-2.319,1.654,3.0163,3.0163,0,0,0-.1509,1.1035v7.6H21.7367s.0643-12.3324,0-13.6092h4.5289v1.9278A4.4946,4.4946,0,0,1,30.342,21.21c2.9783,0,5.2107,1.9446,5.2107,6.1243Z"/></svg>
             </a>
 
             <!-- Behance -->
             <a href="https://www.behance.net/sausfresser6151" target="_blank">
-              <svg version="1.1" id="Layer_1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50"
-                style="enable-background:new 0 0 50 50;" xml:space="preserve">
-                <style type="text/css">
-                  .st0 {
-                    fill: #00ABC8;
-                  }
-                </style>
-                <switch>
-                  <foreignObject requiredExtensions="&ns_ai;" x="0" y="0" width="1" height="1">
-                    <i:pgfRef xlink:href="#adobe_illustrator_pgf">
-                    </i:pgfRef>
-                  </foreignObject>
-                  <g i:extraneous="self">
-                    <path class="st0" d="M25-70C11.19-70,0-58.8,0-45c0,13.8,11.19,25,25,25c13.81,0,25-11.2,25-25C50-58.8,38.81-70,25-70z
-            			 M13.97-55.59h22.06c0.64,0,1.24,0.16,1.75,0.42L25-44.95L12.22-55.18C12.73-55.44,13.33-55.59,13.97-55.59z M10.28-38.79v-13.45
-            			c0-0.66,0.22-1.27,0.57-1.78l9.19,7.34l-9.29,9.5C10.46-37.65,10.28-38.2,10.28-38.79z M36.03-35.43H13.97
-            			c-0.72,0-1.38-0.19-1.95-0.52l9.41-9.62l2.97,2.36c0.17,0.14,0.38,0.21,0.6,0.21c0.22,0,0.43-0.07,0.6-0.2l2.97-2.37l9.41,9.62
-            			C37.41-35.62,36.75-35.43,36.03-35.43z M39.72-38.79c0,0.59-0.18,1.14-0.47,1.62l-9.29-9.5l9.19-7.34
-            			c0.35,0.51,0.57,1.13,0.57,1.78V-38.79z" />
-                    <path class="st0" d="M95-69.95c-13.81,0-25,11.19-25,25c0,13.8,11.19,25,25,25c13.81,0,25-11.19,25-25
-            			C120-58.75,108.81-69.95,95-69.95z M89.24-34.86h-4.52v-13.61h4.52V-34.86z M86.98-50.33h-0.03c-1.52,0-2.5-1.04-2.5-2.35
-            			c0-1.34,1.01-2.35,2.56-2.35c1.55,0,2.5,1.02,2.53,2.35C89.54-51.37,88.55-50.33,86.98-50.33z M105.55-34.86h-4.53v-7.28
-            			c0-1.83-0.65-3.08-2.29-3.08c-1.25,0-1.99,0.84-2.32,1.65c-0.12,0.29-0.15,0.7-0.15,1.1v7.6h-4.53c0,0,0.06-12.33,0-13.61h4.53
-            			v1.93c0.6-0.92,1.67-2.25,4.08-2.25c2.98,0,5.21,1.94,5.21,6.12V-34.86z" />
-                    <g>
-                      <path class="st0" d="M34.83,22.49c-3.22,0-3.67,3.22-3.67,3.22h6.85C38.01,25.71,38.06,22.49,34.83,22.49z" />
-                      <path class="st0" d="M19.29,25.71h-6.07v5.58h5.38c0.09,0,0.23,0,0.39,0c0.87-0.02,2.5-0.27,2.5-2.71
-            				C21.49,25.68,19.29,25.71,19.29,25.71z" />
-                      <path class="st0" d="M25,0C11.19,0,0,11.19,0,25s11.19,25,25,25c13.81,0,25-11.19,25-25C50,11.19,38.81,0,25,0z M30.26,15.36
-            				h8.61v2.57h-8.61V15.36z M25.91,28.84c0,6.37-6.62,6.16-6.62,6.16h-6.07h-0.18h-4.6V14.13h4.6h0.18h6.07c3.3,0,5.9,1.82,5.9,5.55
-            				s-3.18,3.97-3.18,3.97C26.2,23.66,25.91,28.84,25.91,28.84z M42.01,28.49H31.2c0,3.87,3.67,3.63,3.67,3.63
-            				c3.47,0,3.35-2.24,3.35-2.24h3.67c0,5.96-7.14,5.55-7.14,5.55c-8.56,0-8.01-7.97-8.01-7.97s-0.01-8.01,8.01-8.01
-            				C43.19,19.44,42.01,28.49,42.01,28.49z" />
-                      <path class="st0" d="M20.76,20.01c0-2.17-1.48-2.17-1.48-2.17h-0.78h-5.29v4.65h5.7C19.89,22.49,20.76,22.18,20.76,20.01z" />
-                    </g>
-                  </g>
-                </switch>
-              </svg>
+              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>behance</title><path class="cls-1" d="M34.8319,22.4943a3.73,3.73,0,0,0-3.67,3.2164h6.851A3.1032,3.1032,0,0,0,34.8319,22.4943Z"/><path class="cls-1" d="M19.2881,25.7107H13.2148v5.5758h5.3768c.0914,0,.2285.0021.3889,0,.865-.02,2.5046-.272,2.5046-2.7107C21.4851,25.6812,19.2881,25.7107,19.2881,25.7107Z"/><path class="cls-1" d="M25.001,0A25,25,0,1,0,50,24.999,24.9993,24.9993,0,0,0,25.001,0Zm5.2622,15.361H38.87V17.93H30.2632Zm-4.35,13.4747c0,6.3667-6.6246,6.1566-6.6246,6.1566H8.4328v-20.86H19.2881c3.2976,0,5.9007,1.8213,5.9007,5.5535a3.6217,3.6217,0,0,1-3.1828,3.97C26.2021,23.6558,25.9127,28.8357,25.9127,28.8357Zm16.1-.3411h-10.81a3.394,3.394,0,0,0,3.67,3.6306c3.4661,0,3.3453-2.2448,3.3453-2.2448H41.891c0,5.9566-7.14,5.5485-7.14,5.5485-8.5649,0-8.0136-7.975-8.0136-7.975S26.729,19.44,34.7507,19.44C43.1946,19.44,42.0129,28.4946,42.0129,28.4946Z"/><path class="cls-1" d="M20.7633,20.01c0-2.17-1.4752-2.17-1.4752-2.17H13.2148v4.654h5.6966C19.8942,22.4943,20.7633,22.1786,20.7633,20.01Z"/></svg>
             </a>
 
           </div>
