add link to peakweather on index

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <h5>UX CASE STUDY</h5>
           <p>A weather app for the mountains. PeakWeather provides an accurate weather forecast to help hikers make better decisions on the trail by simplifying and organizing the data.</p>
           <p>UX/UI Designer | Adobe XD, Photoshop, Illustrator</p>
-          <a href="">View Project</a>
+          <a href="peakweather.html">View Project</a>
         </div>
 
       </div>
