updated peakweather alt tags

--- a/peakweather.html
+++ b/peakweather.html
@@ -43,7 +43,7 @@
       <div>
         <picture>
           <source srcset="img/home/project-peakweather-1x.jpg" media="(max-width:767px)">
-          <img src="img/home/project-peakweather-2x.jpg" alt="PeakWeather">
+          <img src="img/home/project-peakweather-2x.jpg" alt="PeakWeather Mockup">
         </picture>
       </div>
 
@@ -70,7 +70,7 @@
         <div>
           <picture>
             <source srcset="img/peakweather/peakweather-competitive-analysis-1x.png" media="(max-width:767px)">
-            <img src="img/peakweather/peakweather-competitive-analysis-2x.png" alt="PeakWeather">
+            <img src="img/peakweather/peakweather-competitive-analysis-2x.png" alt="Competitive Analysis Report">
           </picture>
         </div>
 
@@ -87,17 +87,17 @@
         <div>
           <picture>
             <source srcset="img/peakweather/peakweather-personas-1x.png" media="(max-width:767px)">
-            <img src="img/peakweather/peakweather-personas-2x.png" alt="PeakWeather">
+            <img src="img/peakweather/peakweather-personas-2x.png" alt="User Persona">
           </picture>
 
           <picture>
             <source srcset="img/peakweather/peakweather-journey-1x.png" media="(max-width:767px)">
-            <img src="img/peakweather/peakweather-journey-2x.png" alt="PeakWeather">
+            <img src="img/peakweather/peakweather-journey-2x.png" alt="User Journey">
           </picture>
 
           <picture>
             <source srcset="img/peakweather/peakweather-userflow-1x.png" media="(max-width:767px)">
-            <img src="img/peakweather/peakweather-userflow-2x.png" alt="PeakWeather">
+            <img src="img/peakweather/peakweather-userflow-2x.png" alt="User Flow">
           </picture>
         </div>
       </div>
@@ -114,7 +114,7 @@
       <div>
         <picture>
           <source srcset="img/peakweather/peakweather-wireframes-mid-1x.png" media="(max-width:767px)">
-          <img src="img/peakweather/peakweather-wireframes-mid-2x.png" alt="PeakWeather">
+          <img src="img/peakweather/peakweather-wireframes-mid-2x.png" alt="Mid Fidelty Wireframes">
         </picture>
       </div>
 
@@ -128,12 +128,12 @@
       <div>
         <picture>
           <source srcset="img/peakweather/peakweather-testingAB-1x.png" media="(max-width:767px)">
-          <img src="img/peakweather/peakweather-testingAB-2x.png" alt="PeakWeather">
+          <img src="img/peakweather/peakweather-testingAB-2x.png" alt="A/B Testing">
         </picture>
 
         <picture>
           <source srcset="img/peakweather/peakweather-mockups-1x.png" media="(max-width:767px)">
-          <img src="img/peakweather/peakweather-mockups-2x.png" alt="PeakWeather">
+          <img src="img/peakweather/peakweather-mockups-2x.png" alt="Final Mockup Designs">
         </picture>
       </div>
 
