--- a/peakweather.html
+++ b/peakweather.html
@@ -5,12 +5,16 @@
   <meta charset="utf-8">
   <title>PeakWeather App | Stephanie Ausfresser Portfolio</title>
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
 <body>
 
-  <header>
+  <header id="nav">
     <div>
       <a href="index.html"><img src="img/logo/logo.svg" width="200" alt="Logo"></a>
 
@@ -26,7 +30,7 @@
 
   <main>
 
-    <div>
+    <div id="project">
 
       <!-- INTRO -->
       <div>
@@ -147,8 +151,8 @@
       <h2>Get in Touch</h2>
       <p>If you'd like to learn more about a project, interested in working together, or just want to chat, please reach out.
         <div>
-          <a href="mailto:sausfresser@gmail.com">Email Me</a>
-          <a href="tel:410-599-4921">Call Me</a>
+          <a href="mailto:sausfresser@gmail.com" class="button contact">Email Me</a>
+          <a href="tel:410-599-4921" class="button contact">Call Me</a>
 
           <p>&copy; Stephanie Ausfresser 2019</p>
 
@@ -162,12 +166,12 @@
 
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/stephanie-ausfresser/" target="_blank">
-              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>linkedin</title><path class="cls-1" d="M24.9993.0527A25,25,0,1,0,50.001,25.0538,25.0024,25.0024,0,0,0,24.9993.0527Zm-5.76,35.0846H14.7156V21.5281H19.239ZM16.9758,19.67h-.0279a2.3576,2.3576,0,1,1,.0587-4.7022,2.3587,2.3587,0,1,1-.0308,4.7022ZM35.5527,35.1373H31.0265V27.8564c0-1.8273-.651-3.0761-2.291-3.0761a2.4733,2.4733,0,0,0-2.319,1.654,3.0163,3.0163,0,0,0-.1509,1.1035v7.6H21.7367s.0643-12.3324,0-13.6092h4.5289v1.9278A4.4946,4.4946,0,0,1,30.342,21.21c2.9783,0,5.2107,1.9446,5.2107,6.1243Z"/></svg>
+              <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>linkedin</title><path class="cls-1" d="M24.9993.0527A25,25,0,1,0,50.001,25.0538,25.0024,25.0024,0,0,0,24.9993.0527Zm-5.76,35.0846H14.7156V21.5281H19.239ZM16.9758,19.67h-.0279a2.3576,2.3576,0,1,1,.0587-4.7022,2.3587,2.3587,0,1,1-.0308,4.7022ZM35.5527,35.1373H31.0265V27.8564c0-1.8273-.651-3.0761-2.291-3.0761a2.4733,2.4733,0,0,0-2.319,1.654,3.0163,3.0163,0,0,0-.1509,1.1035v7.6H21.7367s.0643-12.3324,0-13.6092h4.5289v1.9278A4.4946,4.4946,0,0,1,30.342,21.21c2.9783,0,5.2107,1.9446,5.2107,6.1243Z"/></svg>
             </a>
 
             <!-- Behance -->
             <a href="https://www.behance.net/sausfresser6151" target="_blank">
-              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>behance</title><path class="cls-1" d="M34.8319,22.4943a3.73,3.73,0,0,0-3.67,3.2164h6.851A3.1032,3.1032,0,0,0,34.8319,22.4943Z"/><path class="cls-1" d="M19.2881,25.7107H13.2148v5.5758h5.3768c.0914,0,.2285.0021.3889,0,.865-.02,2.5046-.272,2.5046-2.7107C21.4851,25.6812,19.2881,25.7107,19.2881,25.7107Z"/><path class="cls-1" d="M25.001,0A25,25,0,1,0,50,24.999,24.9993,24.9993,0,0,0,25.001,0Zm5.2622,15.361H38.87V17.93H30.2632Zm-4.35,13.4747c0,6.3667-6.6246,6.1566-6.6246,6.1566H8.4328v-20.86H19.2881c3.2976,0,5.9007,1.8213,5.9007,5.5535a3.6217,3.6217,0,0,1-3.1828,3.97C26.2021,23.6558,25.9127,28.8357,25.9127,28.8357Zm16.1-.3411h-10.81a3.394,3.394,0,0,0,3.67,3.6306c3.4661,0,3.3453-2.2448,3.3453-2.2448H41.891c0,5.9566-7.14,5.5485-7.14,5.5485-8.5649,0-8.0136-7.975-8.0136-7.975S26.729,19.44,34.7507,19.44C43.1946,19.44,42.0129,28.4946,42.0129,28.4946Z"/><path class="cls-1" d="M20.7633,20.01c0-2.17-1.4752-2.17-1.4752-2.17H13.2148v4.654h5.6966C19.8942,22.4943,20.7633,22.1786,20.7633,20.01Z"/></svg>
+              <svg id="Layer_3" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>behance</title><path class="cls-1" d="M34.8319,22.4943a3.73,3.73,0,0,0-3.67,3.2164h6.851A3.1032,3.1032,0,0,0,34.8319,22.4943Z"/><path class="cls-1" d="M19.2881,25.7107H13.2148v5.5758h5.3768c.0914,0,.2285.0021.3889,0,.865-.02,2.5046-.272,2.5046-2.7107C21.4851,25.6812,19.2881,25.7107,19.2881,25.7107Z"/><path class="cls-1" d="M25.001,0A25,25,0,1,0,50,24.999,24.9993,24.9993,0,0,0,25.001,0Zm5.2622,15.361H38.87V17.93H30.2632Zm-4.35,13.4747c0,6.3667-6.6246,6.1566-6.6246,6.1566H8.4328v-20.86H19.2881c3.2976,0,5.9007,1.8213,5.9007,5.5535a3.6217,3.6217,0,0,1-3.1828,3.97C26.2021,23.6558,25.9127,28.8357,25.9127,28.8357Zm16.1-.3411h-10.81a3.394,3.394,0,0,0,3.67,3.6306c3.4661,0,3.3453-2.2448,3.3453-2.2448H41.891c0,5.9566-7.14,5.5485-7.14,5.5485-8.5649,0-8.0136-7.975-8.0136-7.975S26.729,19.44,34.7507,19.44C43.1946,19.44,42.0129,28.4946,42.0129,28.4946Z"/><path class="cls-1" d="M20.7633,20.01c0-2.17-1.4752-2.17-1.4752-2.17H13.2148v4.654h5.6966C19.8942,22.4943,20.7633,22.1786,20.7633,20.01Z"/></svg>
             </a>
 
           </div>
