--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
 
   <header id="nav">
-    <div>
+    <div class="container">
       <a href="index.html"><img src="img/logo/logo.svg" width="200" alt="Logo"></a>
 
       <nav>
@@ -31,16 +31,18 @@
   <main>
 
     <!-- HEADING -->
-    <div>
-      <h1>About Me</h1>
+    <div id="header">
+      <div class="container">
+        <h1 class="center">About Me</h1>
+      </div>
     </div>
 
 
     <!-- ABOUT CONTENT OPEN -->
-    <div>
+    <div id="profile">
 
       <!-- SUMMARY OPEN -->
-      <div>
+      <div class="container">
 
         <!-- PROFILE PICTURE -->
         <div>
@@ -93,7 +95,7 @@
   </main>
 
   <footer id="contact">
-    <div>
+    <div class="container">
       <h2>Get in Touch</h2>
       <p>If you'd like to learn more about a project, interested in working together, or just want to chat, please reach out.
         <div>
@@ -107,17 +109,53 @@
 
             <!-- Email -->
             <a href="mailto:sausfresser@gmail.com" target="_blank">
-              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>email</title><path class="cls-1" d="M24.9993.0007A24.9993,24.9993,0,1,0,50,24.9972,25.0014,25.0014,0,0,0,24.9993.0007ZM13.9683,14.4052H36.0325a3.8661,3.8661,0,0,1,1.7518.42L24.9993,25.0527,12.2157,14.825A3.8692,3.8692,0,0,1,13.9683,14.4052Zm-3.6837,16.808V17.7679a3.1337,3.1337,0,0,1,.5721-1.7845l9.1946,7.3431-9.295,9.5048A3.0935,3.0935,0,0,1,10.2846,31.2132Zm25.7479,3.3613H13.9683a3.8753,3.8753,0,0,1-1.9461-.5166l9.4108-9.62,2.9658,2.3637a.9354.9354,0,0,0,.6005.2092.9707.9707,0,0,0,.602-.202l2.9657-2.3709,9.4108,9.62A3.8739,3.8739,0,0,1,36.0325,34.5745Zm3.6829-3.3613a3.0923,3.0923,0,0,1-.4724,1.6181l-9.2941-9.5048,9.1944-7.3431a3.1337,3.1337,0,0,1,.5721,1.7845Z"/></svg>
+              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
+                <defs>
+                  <style>
+                    .cls-1 {
+                      fill: #00abc8;
+                    }
+                  </style>
+                </defs>
+                <title>email</title>
+                <path class="cls-1"
+                  d="M24.9993.0007A24.9993,24.9993,0,1,0,50,24.9972,25.0014,25.0014,0,0,0,24.9993.0007ZM13.9683,14.4052H36.0325a3.8661,3.8661,0,0,1,1.7518.42L24.9993,25.0527,12.2157,14.825A3.8692,3.8692,0,0,1,13.9683,14.4052Zm-3.6837,16.808V17.7679a3.1337,3.1337,0,0,1,.5721-1.7845l9.1946,7.3431-9.295,9.5048A3.0935,3.0935,0,0,1,10.2846,31.2132Zm25.7479,3.3613H13.9683a3.8753,3.8753,0,0,1-1.9461-.5166l9.4108-9.62,2.9658,2.3637a.9354.9354,0,0,0,.6005.2092.9707.9707,0,0,0,.602-.202l2.9657-2.3709,9.4108,9.62A3.8739,3.8739,0,0,1,36.0325,34.5745Zm3.6829-3.3613a3.0923,3.0923,0,0,1-.4724,1.6181l-9.2941-9.5048,9.1944-7.3431a3.1337,3.1337,0,0,1,.5721,1.7845Z" />
+              </svg>
             </a>
 
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/stephanie-ausfresser/" target="_blank">
-              <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>linkedin</title><path class="cls-1" d="M24.9993.0527A25,25,0,1,0,50.001,25.0538,25.0024,25.0024,0,0,0,24.9993.0527Zm-5.76,35.0846H14.7156V21.5281H19.239ZM16.9758,19.67h-.0279a2.3576,2.3576,0,1,1,.0587-4.7022,2.3587,2.3587,0,1,1-.0308,4.7022ZM35.5527,35.1373H31.0265V27.8564c0-1.8273-.651-3.0761-2.291-3.0761a2.4733,2.4733,0,0,0-2.319,1.654,3.0163,3.0163,0,0,0-.1509,1.1035v7.6H21.7367s.0643-12.3324,0-13.6092h4.5289v1.9278A4.4946,4.4946,0,0,1,30.342,21.21c2.9783,0,5.2107,1.9446,5.2107,6.1243Z"/></svg>
+              <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
+                <defs>
+                  <style>
+                    .cls-1 {
+                      fill: #00abc8;
+                    }
+                  </style>
+                </defs>
+                <title>linkedin</title>
+                <path class="cls-1"
+                  d="M24.9993.0527A25,25,0,1,0,50.001,25.0538,25.0024,25.0024,0,0,0,24.9993.0527Zm-5.76,35.0846H14.7156V21.5281H19.239ZM16.9758,19.67h-.0279a2.3576,2.3576,0,1,1,.0587-4.7022,2.3587,2.3587,0,1,1-.0308,4.7022ZM35.5527,35.1373H31.0265V27.8564c0-1.8273-.651-3.0761-2.291-3.0761a2.4733,2.4733,0,0,0-2.319,1.654,3.0163,3.0163,0,0,0-.1509,1.1035v7.6H21.7367s.0643-12.3324,0-13.6092h4.5289v1.9278A4.4946,4.4946,0,0,1,30.342,21.21c2.9783,0,5.2107,1.9446,5.2107,6.1243Z" />
+              </svg>
             </a>
 
             <!-- Behance -->
             <a href="https://www.behance.net/sausfresser6151" target="_blank">
-              <svg id="Layer_3" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><defs><style>.cls-1{fill:#00abc8;}</style></defs><title>behance</title><path class="cls-1" d="M34.8319,22.4943a3.73,3.73,0,0,0-3.67,3.2164h6.851A3.1032,3.1032,0,0,0,34.8319,22.4943Z"/><path class="cls-1" d="M19.2881,25.7107H13.2148v5.5758h5.3768c.0914,0,.2285.0021.3889,0,.865-.02,2.5046-.272,2.5046-2.7107C21.4851,25.6812,19.2881,25.7107,19.2881,25.7107Z"/><path class="cls-1" d="M25.001,0A25,25,0,1,0,50,24.999,24.9993,24.9993,0,0,0,25.001,0Zm5.2622,15.361H38.87V17.93H30.2632Zm-4.35,13.4747c0,6.3667-6.6246,6.1566-6.6246,6.1566H8.4328v-20.86H19.2881c3.2976,0,5.9007,1.8213,5.9007,5.5535a3.6217,3.6217,0,0,1-3.1828,3.97C26.2021,23.6558,25.9127,28.8357,25.9127,28.8357Zm16.1-.3411h-10.81a3.394,3.394,0,0,0,3.67,3.6306c3.4661,0,3.3453-2.2448,3.3453-2.2448H41.891c0,5.9566-7.14,5.5485-7.14,5.5485-8.5649,0-8.0136-7.975-8.0136-7.975S26.729,19.44,34.7507,19.44C43.1946,19.44,42.0129,28.4946,42.0129,28.4946Z"/><path class="cls-1" d="M20.7633,20.01c0-2.17-1.4752-2.17-1.4752-2.17H13.2148v4.654h5.6966C19.8942,22.4943,20.7633,22.1786,20.7633,20.01Z"/></svg>
+              <svg id="Layer_3" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
+                <defs>
+                  <style>
+                    .cls-1 {
+                      fill: #00abc8;
+                    }
+                  </style>
+                </defs>
+                <title>behance</title>
+                <path class="cls-1" d="M34.8319,22.4943a3.73,3.73,0,0,0-3.67,3.2164h6.851A3.1032,3.1032,0,0,0,34.8319,22.4943Z" />
+                <path class="cls-1" d="M19.2881,25.7107H13.2148v5.5758h5.3768c.0914,0,.2285.0021.3889,0,.865-.02,2.5046-.272,2.5046-2.7107C21.4851,25.6812,19.2881,25.7107,19.2881,25.7107Z" />
+                <path class="cls-1"
+                  d="M25.001,0A25,25,0,1,0,50,24.999,24.9993,24.9993,0,0,0,25.001,0Zm5.2622,15.361H38.87V17.93H30.2632Zm-4.35,13.4747c0,6.3667-6.6246,6.1566-6.6246,6.1566H8.4328v-20.86H19.2881c3.2976,0,5.9007,1.8213,5.9007,5.5535a3.6217,3.6217,0,0,1-3.1828,3.97C26.2021,23.6558,25.9127,28.8357,25.9127,28.8357Zm16.1-.3411h-10.81a3.394,3.394,0,0,0,3.67,3.6306c3.4661,0,3.3453-2.2448,3.3453-2.2448H41.891c0,5.9566-7.14,5.5485-7.14,5.5485-8.5649,0-8.0136-7.975-8.0136-7.975S26.729,19.44,34.7507,19.44C43.1946,19.44,42.0129,28.4946,42.0129,28.4946Z" />
+                <path class="cls-1" d="M20.7633,20.01c0-2.17-1.4752-2.17-1.4752-2.17H13.2148v4.654h5.6966C19.8942,22.4943,20.7633,22.1786,20.7633,20.01Z" />
+              </svg>
             </a>
 
           </div>
