--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div>
             <picture>
               <source srcset="img/home/project-peakweather-1x.jpg" media="(max-width:767px)">
-              <img src="img/home/project-peakweather-2x.jpg" alt="PeakWeather" class="home-img">
+              <img src="img/home/project-peakweather-2x.jpg" alt="PeakWeather">
             </picture>
           </div>
 
