updated icons in peakweather

--- a/peakweather.html
+++ b/peakweather.html
@@ -14,9 +14,9 @@
 
 <body>
 
-  <header id="nav">
+  <header id="navbar">
     <div class="container">
-      <a href="index.html"><img src="img/logo/logo.svg" width="200" alt="Logo"></a>
+      <a href="index.html"><img src="img/logo/logo.svg" class="logo" alt="Logo"></a>
 
       <nav>
         <ul>
@@ -157,7 +157,7 @@
 
             <!-- Email -->
             <a href="mailto:sausfresser@gmail.com" target="_blank">
-              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
+              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 50 50">
                 <defs>
                   <style>
                     .cls-1 {
@@ -173,7 +173,7 @@
 
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/stephanie-ausfresser/" target="_blank">
-              <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
+              <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 50 50">
                 <defs>
                   <style>
                     .cls-1 {
@@ -189,7 +189,7 @@
 
             <!-- Behance -->
             <a href="https://www.behance.net/sausfresser6151" target="_blank">
-              <svg id="Layer_3" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
+              <svg id="Layer_3" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 50 50">
                 <defs>
                   <style>
                     .cls-1 {
