--- a/about.html
+++ b/about.html
@@ -52,8 +52,7 @@
 
         <div>
           <h3>My Story</h3>
-          <p>As a webmaster with a background in graphic design, I have a strong sense for visual design that can be applied to improving a user’s experience. All aspects of my career including web maintenance as well as graphic and email design have
-            required problem-solving skills that can be applied to UX/UI design. My ability to effectively identify and communicate issues to change and enhance websites will be beneficial to the UX and UI process.</p>
+          <p>As a webmaster with a background in graphic design, I have a strong sense for visual design that can be applied to improving a user’s experience. All aspects of my career including web maintenance as well as graphic and email design have required problem-solving skills that can be applied to UX/UI design. My ability to effectively identify and communicate issues to change and enhance websites will be beneficial to the UX and UI process.</p>
           <a href="files/stephanie-ausfresser-resume.pdf" target="_blank" class="button">Download Resume</a>
         </div>
       </div>
