updated nav & column width in index

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <nav>
         <ul>
-          <li><a href="#work">Work</a></li>
+          <li><a href="#work">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
           <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
@@ -53,7 +53,7 @@
         <div class="row">
 
           <!-- PROJECT 1 IMAGE -->
-          <div class="column col-md-6 col-lg-7">
+          <div class="column col-md-6 col-lg-5">
             <picture>
               <source srcset="img/home/project-peakweather-1x.jpg" media="(max-width:767px)">
               <img src="img/home/project-peakweather-2x.jpg" alt="PeakWeather">
@@ -61,7 +61,7 @@
           </div>
 
           <!-- PROJECT 1 DESCRIPTION -->
-          <div class="column col-md-6 col-lg-5">
+          <div class="column col-md-6 col-lg-7">
             <h3>PeakWeather</h3>
             <h5>UX CASE STUDY</h5>
             <p>A weather app for the mountains. PeakWeather provides an accurate weather forecast to help hikers make better decisions on the trail by simplifying and organizing the data.</p>
@@ -78,15 +78,15 @@
         <div class="row">
 
           <!-- PROJECT 2 IMAGE -->
-          <div class="column col-md-6 col-lg-7">
+          <div class="column col-md-6 col-lg-5">
             <picture>
               <source srcset="img/home/project-fitted-1x.jpg" media="(max-width:767px)">
-              <img src="img/home/project-fitted-2x.jpg" alt="My Image">
+              <img src="img/home/project-fitted-2x.jpg" alt="Fitted">
             </picture>
           </div>
 
           <!-- PROJECT 2 DESCRIPTION -->
-          <div class="column col-md-6 col-lg-5">
+          <div class="column col-md-6 col-lg-7">
             <h3>Fitted</h3>
             <h5>UI CASE STUDY</h5>
             <p>A responsive web app for exercises and workouts. Fitted is geared toward those who are new or returning to fitness and are striving for a healthier lifestyle.</p>
@@ -103,7 +103,7 @@
         <div class="row">
 
           <!-- ANIMATION 1 IMAGE -->
-          <div class="column col-md-6 col-lg-7">
+          <div class="column col-md-6 col-lg-5">
             <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration"  viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
               <defs>
                 <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917" />
@@ -1045,7 +1045,7 @@
           </div>
 
           <!-- ANIMATION 1 DESCRIPTION -->
-          <div class="column col-md-6 col-lg-5">
+          <div class="column col-md-6 col-lg-7">
             <h3>CSS Animation</h3>
             <p>An example of an animated SVG image.</p>
           </div>
