updated nav in about

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
         <nav>
           <ul>
-            <li><a href="index.html#work">Work</a></li>
+            <li><a href="index.html#work">Portfolio</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
@@ -62,7 +62,7 @@
               <h3>My Story</h3>
               <p>As a webmaster with a background in graphic design, I have a strong sense for visual design that can be applied to improving a user’s experience. All aspects of my career including web maintenance as well as graphic and email design
                 have required problem-solving skills that can be applied to UX/UI design. My ability to effectively identify and communicate issues to change and enhance websites will be beneficial to the UX and UI process.</p>
-              <a href="files/stephanie-ausfresser-resume.pdf" target="_blank" class="button">Download Resume</a>
+              <a href="files/stephanie-ausfresser-resume.pdf" target="_blank" class="button">View Resume</a>
             </div>
 
           </div>
