updated nav in fitted

--- a/fitted.html
+++ b/fitted.html
@@ -22,7 +22,7 @@
 
       <nav>
         <ul>
-          <li><a href="index.html#work">Work</a></li>
+          <li><a href="index.html#work">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
@@ -71,7 +71,7 @@
           <div class="work-pic">
             <picture>
               <source srcset="img/fitted/Fitted-UserFlow-1x.jpg" media="(max-width:767px)">
-              <img src="img/fitted/Fitted-UserFlow-2x.jpg" alt="Competitive Analysis Report" class="section-break">
+              <img src="img/fitted/Fitted-UserFlow-2x.jpg" alt="User flow" class="section-break">
             </picture>
           </div>
 
@@ -134,12 +134,12 @@
         <div class="work-pic">
           <picture>
             <source srcset="img/fitted/Fitted-Mockups-Mobile-TopView-1x.jpg" media="(max-width:767px)">
-            <img src="img/fitted/Fitted-Mockups-Mobile-TopView-2x.jpg" alt="A/B Testing">
+            <img src="img/fitted/Fitted-Mockups-Mobile-TopView-2x.jpg" alt="iPhone Mockups">
           </picture>
 
           <picture>
             <source srcset="img/fitted/Fitted-Mockups-MultiDevice-HOME-1x.jpg" media="(max-width:767px)">
-            <img src="img/fitted/Fitted-Mockups-MultiDevice-HOME-2x.jpg" alt="Final Mockup Designs">
+            <img src="img/fitted/Fitted-Mockups-MultiDevice-HOME-2x.jpg" alt="Multiple Device Mockup Designs">
           </picture>
         </div>
 
