updated nav in peakweather

--- a/peakweather.html
+++ b/peakweather.html
@@ -22,7 +22,7 @@
 
       <nav>
         <ul>
-          <li><a href="index.html#work">Work</a></li>
+          <li><a href="index.html#work">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
@@ -53,8 +53,8 @@
 
         <div class="work-pic">
           <picture>
-            <source srcset="img/home/project-peakweather-1x.jpg" media="(max-width:767px)">
-            <img src="img/home/project-peakweather-2x.jpg" alt="PeakWeather Mockup" class="section-break">
+            <source srcset="img/peakweather/peakweather-overview-mockups-1x.png" media="(max-width:767px)">
+            <img src="img/peakweather/peakweather-overview-mockups-2x.png" alt="PeakWeather Mockup" class="section-break">
           </picture>
         </div>
 
