Update color in index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
+
 <head>
   <meta charset="utf-8">
   <title>Stephanie Ausfresser Portfolio</title>
@@ -17,19 +18,19 @@
 
   <header id="navbar">
     <div class="navtoggle" id="myNavtoggle">
-    <div class="container">
-      <a href="index.html"><img src="img/logo/logo.svg" class="logo" alt="Logo"></a>
+      <div class="container">
+        <a href="index.html"><img src="img/logo/logo.svg" class="logo" alt="Logo"></a>
 
-      <nav>
-        <ul>
-          <li><a href="#work">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-          <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li><a href="#work">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+            <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
+          </ul>
+        </nav>
 
-    </div>
+      </div>
     </div>
   </header>
 
@@ -104,7 +105,7 @@
 
           <!-- ANIMATION 1 IMAGE -->
           <div class="column col-md-6 col-lg-5">
-            <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration"  viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
               <defs>
                 <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917" />
               </defs>
@@ -1088,7 +1089,7 @@
                 <defs>
                   <style>
                     .cls-1 {
-                      fill: #00abc8;
+                      fill: #008299;
                     }
                   </style>
                 </defs>
@@ -1105,7 +1106,7 @@
                 <defs>
                   <style>
                     .cls-1 {
-                      fill: #00abc8;
+                      fill: #008299;
                     }
                   </style>
                 </defs>
@@ -1121,7 +1122,7 @@
                 <defs>
                   <style>
                     .cls-1 {
-                      fill: #00abc8;
+                      fill: #008299;
                     }
                   </style>
                 </defs>
@@ -1141,12 +1142,10 @@
     </div>
   </footer>
 
-  <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-<script src="js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
+
 
 </body>
 
