Update color in about

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 </head>
 
 
+
 <body>
 
   <header id="navbar">
@@ -86,18 +87,18 @@
           </div>
 
 
-            <div class="column col-md-6">
-              <h3>Skills</h3>
-              <ul>
-                <li>Competitive Analysis</li>
-                <li>Personas</li>
-                <li>User Journey / User Flow</li>
-                <li>Information Architecture</li>
-                <li>Wireframes</li>
-                <li>Prototypes</li>
-                <li>Visual Design</li>
-              </ul>
-            </div>
+          <div class="column col-md-6">
+            <h3>Skills</h3>
+            <ul>
+              <li>Competitive Analysis</li>
+              <li>Personas</li>
+              <li>User Journey / User Flow</li>
+              <li>Information Architecture</li>
+              <li>Wireframes</li>
+              <li>Prototypes</li>
+              <li>Visual Design</li>
+            </ul>
+          </div>
 
         </div>
       </div>
@@ -126,7 +127,7 @@
               <defs>
                 <style>
                   .cls-1 {
-                    fill: #00abc8;
+                    fill: #008299;
                   }
                 </style>
               </defs>
@@ -143,7 +144,7 @@
               <defs>
                 <style>
                   .cls-1 {
-                    fill: #00abc8;
+                    fill: #008299;
                   }
                 </style>
               </defs>
@@ -159,7 +160,7 @@
               <defs>
                 <style>
                   .cls-1 {
-                    fill: #00abc8;
+                    fill: #008299;
                   }
                 </style>
               </defs>
