Update color, class in fitted

--- a/fitted.html
+++ b/fitted.html
@@ -12,24 +12,24 @@
   <script src="https://kit.fontawesome.com/915f5c5228.js" crossorigin="anonymous"></script>
 </head>
 
-
+  
 <body>
 
   <header id="navbar">
     <div class="navtoggle" id="myNavtoggle">
-    <div class="container">
-      <a href="index.html"><img src="img/logo/logo.svg" class="logo" alt="Logo"></a>
+      <div class="container">
+        <a href="index.html"><img src="img/logo/logo.svg" class="logo" alt="Logo"></a>
 
-      <nav>
-        <ul>
-          <li><a href="index.html#work">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li><a href="index.html#work">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
+          </ul>
+        </nav>
 
-    </div>
+      </div>
     </div>
   </header>
 
@@ -47,7 +47,8 @@
           <h3>Purpose</h3>
           <p class="section-break">For those who are new or returning to exercise it’s important to have a plan and easy access to a workout in order to ensure success.</p>
           <h3>Objective</h3>
-          <p>To develop a responsive web app that provides encouragement and is available for anyone at any level. While it may be hard to find time to work out, the ability to search with filters as well as customize and schedule workouts will help to ensure any user can achieve a healthier lifestyle.</p>
+          <p>To develop a responsive web app that provides encouragement and is available for anyone at any level. While it may be hard to find time to work out, the ability to search with filters as well as customize and schedule workouts will help
+            to ensure any user can achieve a healthier lifestyle.</p>
         </div>
 
 
@@ -109,16 +110,15 @@
         <div>
           <h3>Style</h3>
           <p><strong>Moodboard</strong></p>
-          <p>I created a mood board to help determine the direction of style for the app. The orange color palette evokes energy, strength, and balance and is complemented by brighter photos in an open or outdoor space. These design treatments reflect the goal of encouraging and welcoming those who are just new or returning to fitness and a healthy lifestyle.</p>
+          <p>I created a mood board to help determine the direction of style for the app. The orange color palette evokes energy, strength, and balance and is complemented by brighter photos in an open or outdoor space. These design treatments
+            reflect the goal of encouraging and welcoming those who are just new or returning to fitness and a healthy lifestyle.</p>
 
           <div class="work-pic">
             <picture>
               <source srcset="img/fitted/Fitted-Moodboard-1x.jpg" media="(max-width:767px)">
-              <img src="img/fitted/Fitted-Moodboard-2x.jpg" alt="moodboard" class="section-break" class="img-size">
+              <img src="img/fitted/Fitted-Moodboard-2x.jpg" alt="moodboard" class="section-break">
             </picture>
           </div>
-
-
 
         </div>
 
@@ -128,7 +128,8 @@
         <!-- SECTION 4: DESIGN -->
         <div>
           <h3>Design</h3>
-          <p>I developed mockups from the mid-fidelity wireframes for mobile, tablet, and desktop. With the mobile-first approach, I reworked the design for the larger breakpoints after finalizing the high-fidelity wireframes for mobile. For all breakpoints, it was important to simplify both the content on the page with minimal information as well as the flow from page to page in order to complete a task.</p>
+          <p>I developed mockups from the mid-fidelity wireframes for mobile, tablet, and desktop. With the mobile-first approach, I reworked the design for the larger breakpoints after finalizing the high-fidelity wireframes for mobile. For all
+            breakpoints, it was important to simplify both the content on the page with minimal information as well as the flow from page to page in order to complete a task.</p>
         </div>
 
         <div class="work-pic">
@@ -167,7 +168,7 @@
                 <defs>
                   <style>
                     .cls-1 {
-                      fill: #00abc8;
+                      fill: #008299;
                     }
                   </style>
                 </defs>
@@ -183,7 +184,7 @@
                 <defs>
                   <style>
                     .cls-1 {
-                      fill: #00abc8;
+                      fill: #008299;
                     }
                   </style>
                 </defs>
@@ -199,7 +200,7 @@
                 <defs>
                   <style>
                     .cls-1 {
-                      fill: #00abc8;
+                      fill: #008299;
                     }
                   </style>
                 </defs>
@@ -219,12 +220,9 @@
     </div>
   </footer>
 
-  <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-<script src="js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
 
 </body>
 
